--- a/src/app/accounts/login/login.component.html
+++ b/src/app/accounts/login/login.component.html
@@ -5,17 +5,35 @@
             <div class="container">
                 <div class="title mb-5">
                     <h2>Login</h2>
-                    <p>Don't have an account?,<a href="#">Get started here!</a></p>
+                    <p>Don't have an account?,
+                        <a href="#">Get started here!</a>
+                    </p>
                 </div>
-                <form [formGroup]="LocalForm" #form="ngForm" (ngSubmit)="onSubmit()">
+                <form 
+                    [formGroup]="LocalForm" 
+                    #form="ngForm" 
+                    (ngSubmit)="onSubmit()"
+                >
                     <div class="form-group">
                         <mat-form-field appearance="outline">
                             <mat-label>Email</mat-label>
-                            <input matInput type="email" placeholder="Enter your email here" formControlName="email" [errorStateMatcher]="matcher">
-                            <mat-error *ngIf="LocalForm.controls['email'].hasError('email') && !LocalForm.controls['email'].hasError('required')">
+                            <input 
+                                matInput 
+                                type="email" 
+                                placeholder="Enter your email here" 
+                                formControlName="email" 
+                                [errorStateMatcher]="matcher"
+                            >
+                            <mat-error 
+                                *ngIf="
+                                    LocalForm.controls['email'].hasError('email') && !LocalForm.controls['email'].hasError('required')
+                                    "
+                                >
                                 Please enter a valid email address
                             </mat-error>
-                            <mat-error *ngIf="LocalForm.controls['email'].hasError('required')">
+                            <mat-error 
+                                *ngIf="LocalForm.controls['email'].hasError('required')"
+                            >
                                 Email is required
                             </mat-error>
                         </mat-form-field>
@@ -24,17 +42,35 @@
                     <div class="form-group">
                         <mat-form-field appearance="outline">
                             <mat-label>Password</mat-label>
-                            <input matInput type="password" placeholder="Enter your password" formControlName="password" [errorStateMatcher]="matcher">
-                            <mat-error *ngIf="LocalForm.controls.password.hasError('password') && !LocalForm.controls['password'].hasError('required')">
+                            <input 
+                                matInput 
+                                type="password" 
+                                placeholder="Enter your password" 
+                                formControlName="password" 
+                                [errorStateMatcher]="matcher"
+                            >
+                            <mat-error 
+                                *ngIf="
+                                    LocalForm.controls.password.hasError('password') && !LocalForm.controls['password'].hasError('required')
+                                    "
+                            >
                                 Please enter a correct password!
                             </mat-error>
-                            <mat-error *ngIf="LocalForm.controls['password'].hasError('required')">
+                            <mat-error 
+                                *ngIf="LocalForm.controls['password'].hasError('required')"
+                            >
                                 Password is required
                             </mat-error>
                         </mat-form-field>
                     </div>
                     <pre></pre>
-                    <button mat-raised-button type="submit" color="primary">Login</button>
+                    <button 
+                        mat-raised-button 
+                        type="submit" 
+                        color="primary"
+                    >
+                        Login
+                    </button>
                 </form>
             </div>
         </div>
