--- a/src/app/accounts/create/info-form/info-form.component.html
+++ b/src/app/accounts/create/info-form/info-form.component.html
@@ -1,1 +1,54 @@
-<p>info-form works!</p>
+<!-- <p>info-form works!</p> -->
+<!-- User details -->
+<section>
+    <div class="container w-100">
+        <div class="funda-logo">
+            <img src="" alt="">
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-10">
+                <div class="d-flex flex-column align-items-stretch">
+                    <div class="my-4">
+                        <h1 class="text-center">User Account Details</h1>
+                        <p>Dear, </p>
+                        <p>Below are the details of your account with Funda</p>
+                    </div>
+                    <div>
+                        <div class="row mb-4">
+                            <div class="col-12 col-md-6">
+                                <label for=""><strong>Customer Name</strong></label>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <input type="text" name="" id="" value="" class="w-100">
+                            </div>
+                        </div>
+                        <div class="row mb-4">
+                            <div class="col-12 col-md-6">
+                                <label for=""><strong>Account Number</strong></label>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <input type="text" name="" id="" value="" class="w-100">
+                            </div>
+                        </div>
+                        <div class="row mb-4">
+                            <div class="col-12 col-md-6">
+                                <label for=""><strong>Customer Name</strong></label>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <input type="text" name="" id="" value="" class="w-100">
+                            </div>
+                        </div>
+                        <div class="row mb-4">
+                            <div class="col-12 col-md-6">
+                                <label for=""><strong>Account Number</strong></label>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <input type="text" name="" id="" value="" class="w-100">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
