--- a/src/app/home/about-us-section/about-us-section.component.html
+++ b/src/app/home/about-us-section/about-us-section.component.html
@@ -1,9 +1,9 @@
 <!-- Start of about us section -->
 <section class="aboutUs-section" id="aboutUs">
-    <div class="container">
-        <div class="px-5">
-            <div class="row">
-                <div class="col-12 col-md-6 aboutUs-content">
+    <div class="container px-5">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <div class="d-flex flex-column justify-content-center">
                     <h1 class="text-primary font-weight-semibold font-48px">
                         ABOUT US
                     </h1>
@@ -17,7 +17,9 @@
                         global markets with confidence. 
                     </p>
                 </div>
-                <div class="col-12 col-md-6">
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="d-flex flex-column justify-content-center">
                     <lottie-player 
                         src="https://assets3.lottiefiles.com/private_files/lf30_hknognhr.json"  
                         background="transparent" 
