--- a/src/app/home/blog-section/blog-section.component.html
+++ b/src/app/home/blog-section/blog-section.component.html
@@ -10,9 +10,9 @@
             </p>
             <div class="row info-content">
                 <div 
-                    class="col-12 col-sm-6 col-md-4 d-flex justify-content-center"
+                    class="col-12 col-sm-6 col-md-4"
                 >
-                    <div class="block-content">
+                    <div class="block-content d-flex justify-content-center">
                         <p class="text-dark">
                             25 AUG, 2021 | TECHNOLOGY
                         </p>
@@ -50,9 +50,9 @@
                     </div>
                 </div>
                 <div 
-                    class="col-12 col-sm-6 col-md-4 d-flex justify-content-center"
+                    class="col-12 col-sm-6 col-md-4"
                 >
-                    <div class="block-content">
+                    <div class="block-content d-flex flex-column align-items-start">
                         <p class="text-dark">
                             25 AUG, 2021 | TECHNOLOGY
                         </p>
