--- a/src/app/home/download-section/download-section.component.scss
+++ b/src/app/home/download-section/download-section.component.scss
@@ -1,26 +1,30 @@
 @import '../../../theme/colors.scss';
 
-.download-section {
-    background-color: $primaryColor;
-    .download-content {
-        margin-top: 30px;
-        .mobile-phone {
-            margin-bottom: -150px;
-        }
-        .phones-content {
-            margin-top: 160px;
-            padding-left: 50px;
-        }
-    }
+// .download-section {
+    // .download-content {
+    //     margin-top: 30px;
+    //     .mobile-phone {
+    //         margin-bottom: -150px;
+    //     }
+    //     .phones-content {
+    //         margin-top: 160px;
+    //         padding-left: 50px;
+    //     }
+    // }
+    // .download-wave-bottom {
+    //     height: 9em;
+    //     margin-top: -120px;;
+    // }
+    // 
+    // 
+// }
+@media (max-width: 768px) {
     .download-wave-bottom {
-        height: 9em;
-        background-image: url("../../../assets/images/homepage/download/download-wave-bottom.png");
-        background-repeat: no-repeat;
-        background-size: 100%;
+        margin-top: -100px;
     }
-    @media (max-width: 576px) {
-        .download-wave-bottom {
-            height: 50px;
-        }
+}
+@media (min-width: 1750px) {
+    .download-wave-bottom {
+        margin-top: -100px !important;
     }
 }
