--- a/src/app/home/empower-section/empower-section.component.html
+++ b/src/app/home/empower-section/empower-section.component.html
@@ -1,5 +1,5 @@
 <!-- Empower section begins here -->
-<section class="empower-section">
+<section class="empower-section bg-primary">
     <div class="container">
         <div class="empower-cover">
             <div class="row">
