--- a/src/app/home/footer-section/footer-section.component.html
+++ b/src/app/home/footer-section/footer-section.component.html
@@ -1,137 +1,190 @@
 <!-- Start of footer section -->
-<section class="cryptonite-footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-sm-6 col-md-3">
-                <img 
-                    class="img-fluid "
-                    src="assets/images/homepage/footer/footer-logo.png" 
-                    alt="Footer Logo"
-                >
-                <p class="font-20px font-weight-600 text-accent footer-connect">
-                    Connect with us:
-                </p>
-                <ul class="d-flex flex-row">
-                    <li class="">
-                        <a href="https://twitter.com">
-                            <img 
-                                class="img-fluid " 
-                                src="assets/images/homepage/footer/twitter.png" 
-                                alt="twitter"
-                            >
-                        </a>
-                    </li>
-                    <li class="mx-2">
-                        <a href="https://www.facebook.com">
-                            <img 
-                                class="img-fluid " 
-                                src="assets/images/homepage/footer/facebook.png" 
-                                alt="Facebook"
-                            >
-                        </a>
-                    </li>
-                    <li class="mx-2">
-                        <a href="https://www.instagram.com">
-                            <img 
-                                class="img-fluid " 
-                                src="assets/images/homepage/footer/instagram.png" 
-                                alt="Instagram"
-                            >
-                        </a>
-                    </li>
-                    <li class="mx-2">
-                        <a href="https://www.linkedin.com">
-                            <img 
-                                class="img-fluid " 
-                                src="assets/images/homepage/footer/linkedin.png" 
-                                alt="linkedin"
-                            >
-                        </a>
-                    </li>
-                    <li class="mx-2">
-                        <a href="https://discord.com">
-                            <img 
-                                class="img-fluid " 
-                                src="assets/images/homepage/footer/discord-logo.png" 
-                                alt="Discord Logo"
-                            >
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-12 col-sm-6 col-md-3">
-                <h2 class="text-accent">
-                    Cryptonite Links
-                </h2>
-                <ul class="text-white d-flex flex-column">
-                    <li class="my-1">
-                        <a href="#">
-                            Home
-                        </a>
-                    </li>
-                    <li class="my-1">
-                        <a href="#aboutUs">
-                            About Us
-                        </a>
-                    </li>
-                    <li class="my-1">
-                        <a href="#blog">
-                            Blog
-                        </a>
-                    </li>
-                    <li class="my-1">
-                        <a href="#services">
-                            Services
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-12 col-sm-6 col-md-3">
-                <h2 
-                    class="text-accent"
-                >
-                    Contact Us
-                </h2>
-                <ul class="text-white d-flex flex-column">
-                    <li class="my-1">
-                        <a href="#">
-                            +971 586765840
-                        </a>
-                    </li>
-                    <li class="my-1">
-                        <a href="#">
-                            admin@cryptonite.com
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-12 col-sm-6 col-md-3">
-                <h2 class="text-accent">
-                    Community
-                </h2>
-                <ul class="text-white d-flex flex-column">
-                    <li class="my-1">
-                        <a href="#">
-                            Documentation
-                        </a>
-                    </li>
-                    <li class="my-1">
-                        <a href="#">
-                            Terms of Service
-                        </a>
-                    </li>
-                    <li class="my-1">
-                        <a href="#">
-                            FAQ
-                        </a>
-                    </li>
-                </ul>
-            </div>
+<div class="container-fluid cryptonite-footer bg-primary pt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-sm-6 col-md-3">
+        <div class="d-flex flex-column align-items-start">
+          <img
+            class="img-fluid"
+            src="assets/images/homepage/footer/footer-logo.png"
+            alt="Footer Logo"
+          />
+          <h2
+            class="font-26px font-weight-semibold opacity-50 text-accent my-4"
+          >
+            Connect with us:
+          </h2>
+          <ul class="d-flex flex-row list-unstyled p-0">
+            <li class="">
+              <a
+                href="https://twitter.com"
+                target="_blank"
+                class="text-decoration-none"
+              >
+                <img
+                  class="img-fluid"
+                  src="assets/images/homepage/footer/twitter.png"
+                  alt="twitter"
+                />
+              </a>
+            </li>
+            <li class="mx-2">
+              <a
+                href="https://www.facebook.com"
+                target="_blank"
+                class="text-decoration-none"
+              >
+                <img
+                  class="img-fluid"
+                  src="assets/images/homepage/footer/facebook.png"
+                  alt="Facebook"
+                />
+              </a>
+            </li>
+            <li class="mx-2">
+              <a
+                href="https://www.instagram.com"
+                target="_blank"
+                class="text-decoration-none"
+              >
+                <img
+                  class="img-fluid"
+                  src="assets/images/homepage/footer/instagram.png"
+                  alt="Instagram"
+                />
+              </a>
+            </li>
+            <li class="mx-2">
+              <a
+                href="https://www.linkedin.com"
+                target="_blank"
+                class="text-decoration-none"
+              >
+                <img
+                  class="img-fluid"
+                  src="assets/images/homepage/footer/linkedin.png"
+                  alt="linkedin"
+                />
+              </a>
+            </li>
+            <li class="mx-2">
+              <a
+                href="https://discord.com"
+                target="_blank"
+                class="text-decoration-none"
+              >
+                <img
+                  class="img-fluid"
+                  src="assets/images/homepage/footer/discord-logo.png"
+                  alt="Discord Logo"
+                />
+              </a>
+            </li>
+          </ul>
         </div>
-        <div class="container">
-            <p class="text-center text-white">
-                &copy 2021 Cryptonite All Rights Reserved
-            </p>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3">
+        <div class="d-flex flex-column align-items-start">
+          <h2 class="text-accent opacity-50 font-26px">Cryptonite Links</h2>
+          <ul class="text-white d-flex flex-column list-unstyled p-0">
+            <li class="font-13px my-3">
+              <a
+                href="javascript:void(0)"
+                class="text-secondary text-decoration-none"
+              >
+                Home
+              </a>
+            </li>
+            <li class="font-13px my-3">
+              <a
+                href="#aboutUs"
+                target="_blank"
+                class="text-secondary text-decoration-none"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="font-13px my-3">
+              <a
+                href="#blog"
+                target="_blank"
+                class="text-secondary text-decoration-none"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="font-13px my-3">
+              <a
+                href="#services"
+                target="_blank"
+                class="text-secondary text-decoration-none"
+              >
+                Services
+              </a>
+            </li>
+          </ul>
         </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3">
+        <div class="d-flex flex-column align-items-start">
+          <h2 class="text-accent opacity-50 font-26px">Contact Us</h2>
+          <ul class="text-white d-flex flex-column list-unstyled p-0">
+            <li class="font-13px my-3">
+              <a href="#" class="text-secondary text-decoration-none">
+                +971 586765840
+              </a>
+            </li>
+            <li class="font-13px my-3">
+              <a href="#" class="text-secondary text-decoration-none">
+                admin@cryptonite.com
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3">
+        <div class="d-flex flex-column align-items-start">
+          <h2 class="text-accent opacity-50 font-26px">Community</h2>
+          <ul class="text-white d-flex flex-column list-unstyled p-0">
+            <li class="font-13px my-3">
+              <a
+                href="#"
+                target="_blank"
+                class="text-secondary text-decoration-none"
+              >
+                Documentation
+              </a>
+            </li>
+            <li class="font-13px my-3">
+              <a
+                href="#"
+                target="_blank"
+                class="text-secondary text-decoration-none"
+              >
+                Terms of Service
+              </a>
+            </li>
+            <li class="font-13px my-3">
+              <a
+                href="#"
+                target="_blank"
+                class="text-secondary text-decoration-none"
+              >
+                FAQ
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
-</section>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <div class="d-flex justify-content-center">
+        <p class="text-white opacity-50">
+          &copy 2021 Cryptonite All Rights Reserved
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
