--- a/src/app/home/services-section/services-section.component.html
+++ b/src/app/home/services-section/services-section.component.html
@@ -1,5 +1,5 @@
 <!-- Start of services section -->
-<section class="services-section" id="services">
+<section class="services-section bg-primary" id="services">
     <div class="container">
         <div class="px-5">
             <div class="row">
