--- a/src/app/home/subscribe-section/subscribe-section.component.html
+++ b/src/app/home/subscribe-section/subscribe-section.component.html
@@ -1,29 +1,29 @@
-<!-- Start of subscribe section -->
-
-<section class="subscribe-section">
-    <div class="container">
-        <p class="text-center">
+<section class="subscribe-section py-5">
+  <div class="container">
+    <div class="row d-flex justify-content-center align-items-center">
+      <div class="col-sm-12 col-md-10 col-lg-8">
+        <div
+          class="d-flex flex-column align-items-center justify-content-center"
+        >
+          <p class="font-weight-semibold text-center font-35px">
             Subscribe to our newsletter
-        </p>
-        <p class="text-center subscriibe-para">
+          </p>
+          <p class="font-weight-medium font-26px text-center">
             for daily/weekly update of our products and services
-        </p>
-        <div class="input-wrapper text-center subscribe">
-            <input 
-                type="email"
-                placeholder="Email"
-                class="subscribe-input form-input" 
-            >
-            <button 
-                type="submit"
-                class="btn arrow-btn"
-            >
-                <img 
-                    class="arrow-img position-relative"
-                    src="assets/images/homepage/subscribe/arrow.png"
-                    alt="Arrow Image" 
-                >
+          </p>
+          <mat-form-field appearance="outline" class="w-50 infix">
+            <input
+              matInput
+              type="email"
+              placeholder="Email"
+              class="form-input"
+            />
+            <button mat-fab color="accent" matSuffix>
+              <mat-icon>near_me</mat-icon>
             </button>
+          </mat-form-field>
         </div>
+      </div>
     </div>
+  </div>
 </section>
