--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,30 +1,14 @@
 
-<homepage-navbar></homepage-navbar>
+<!-- <homepage-navbar></homepage-navbar> -->
 <div class="homepage">
-    <!-- Empower Section -->
-    <empower-section></empower-section>
-    <!-- Empower Section -->
-    <!-- Trusted Partners section -->
+    <!-- <empower-section></empower-section>
     <trusted-partners-section></trusted-partners-section>
-    <!-- Trusted Partners section -->
-    <!-- Services Section -->
     <services-section></services-section>
-    <!-- Services Section -->
-    <!-- About Us section -->
     <about-us-section></about-us-section>
-    <!-- About Us section -->
-    <!-- Coin Section -->
     <coin-section></coin-section>
-    <!-- Coin Section -->
-    <!-- Blog section -->
-    <blog-section></blog-section>
-    <!-- Blog section -->
-    <!-- Download Section -->
+    <blog-section></blog-section> -->
     <download-section></download-section>
-    <!-- Download Section -->
-    <!-- Subscribe section -->
     <subscribe-section></subscribe-section>
-    <!-- Subscribe section -->
 </div>
-<homepage-footer></homepage-footer>
+<!-- <homepage-footer></homepage-footer> -->
 
