--- a/src/app/home/navbar-section/navbar-section.component.html
+++ b/src/app/home/navbar-section/navbar-section.component.html
@@ -26,13 +26,13 @@
     >
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a href="#" class="nav-link">About Us</a>
+                <a href="#aboutUs" class="nav-link" >About Us</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Blog</a>
+                <a href="#blog" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Contact Us</a>
+                <a href="#subscribe" class="nav-link">Contact Us</a>
             </li>
         </ul>
         <form class="form-inline mx-2 my-2 my-lg-0">
